--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dasmoto's Arts & Crafts</title>
+    <link rel="stylesheet" href=".assets/styles/main.css">
 </head>
 
 <body>
 
-    <div></div>
+    <header>
+        <h1>Dasmoto's Arts & Crafts</h1>
+    </header>
     
 </body>
 
