--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dasmoto's Arts & Crafts</title>
-    <link rel="stylesheet" href=".assets/styles/main.css">
+    <link rel="stylesheet" href="./assets/styles/main.css">
 </head>
 
 <body>
