--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
     <header>
         <h1>Dasmoto's Arts & Crafts</h1>
     </header>
+
+    <section class="brushes">
+        <h2>Brushes</h2>
+        <img src="" alt="">
+        <h3>Hacksaw Brushes</h3>
+        <p>Made of the highest quality oak, Hacksaw brushes are known
+            for their weight and ability to hold paint in large amounts.
+             Available in different sizes. Starting at $3.00 / brush.</p>
+    </section>
     
 </body>
 
