--- a/index.html
+++ b/index.html
@@ -23,6 +23,24 @@
              Available in different sizes. Starting at $3.00 / brush.</p>
     </section>
     
+    <section class="frames">
+        <h2>Frames</h2>
+        <img src="" alt="">
+        <h3>Art Frames (assorted)</h3>
+        <p>Made of the highest quality oak, Hacksaw brushes are known
+            for their weight and ability to hold paint in large amounts.
+             Available in different sizes. Starting at $3.00 / brush.</p>
+    </section>
+
+    <section class="paint">
+        <h2>Paint</h2>
+        <img src="" alt="">
+        <h3>Clean Finnish Paint</h3>
+        <p>Made of the highest quality oak, Hacksaw brushes are known
+            for their weight and ability to hold paint in large amounts.
+             Available in different sizes. Starting at $3.00 / brush.</p>
+    </section>
+
 </body>
 
 </html>
