--- a/index.html
+++ b/index.html
@@ -27,18 +27,18 @@
         <h2>Frames</h2>
         <img src="" alt="">
         <h3>Art Frames (assorted)</h3>
-        <p>Made of the highest quality oak, Hacksaw brushes are known
-            for their weight and ability to hold paint in large amounts.
-             Available in different sizes. Starting at $3.00 / brush.</p>
+        <p>Assorted frames made of different material, including MDF, birchwood,
+             and PDE. Select frames can be sanded and painted according to your needs.
+              Starting at $2.00 / frame.</p>
     </section>
 
     <section class="paint">
         <h2>Paint</h2>
         <img src="" alt="">
         <h3>Clean Finnish Paint</h3>
-        <p>Made of the highest quality oak, Hacksaw brushes are known
-            for their weight and ability to hold paint in large amounts.
-             Available in different sizes. Starting at $3.00 / brush.</p>
+        <p>Imported paint from Finland. Over 256 colors available in-store, varying in quantity
+             (1 oz. to 8 oz.). Clean Finnish paint microbinds to canvas,
+              increasing the finish and longevity of any artwork. Starting at $5.00 / tube.</p>
     </section>
 
 </body>
