...add .section-container

--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
         </header>
     
         <section class="brushes">
-            <h2>Brushes</h2>
-            <img src="./assets/images/hacksaw.jpeg" alt="image of three brushes on a table">
-            <h3>Hacksaw Brushes</h3>
-            <p>Made of the highest quality oak, Hacksaw brushes are known
-                for their weight and ability to hold paint in large amounts.
-                 Available in different sizes. Starting at $3.00 / brush.</p>
+            <div class="section-container">
+                <h2>Brushes</h2>
+                <img src="./assets/images/hacksaw.jpeg" alt="image of three brushes on a table">
+                <h3>Hacksaw Brushes</h3>
+                <p>Made of the highest quality oak, Hacksaw brushes are known
+                    for their weight and ability to hold paint in large amounts.
+                     Available in different sizes. Starting at $3.00 / brush.</p>    
+            </div>
         </section>
         
         <section class="frames">
