...remove img width from css/add img width in html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <section class="brushes">
             <h2>Brushes</h2>
             <div class="section-container">
-                <img src="./assets/images/hacksaw.jpeg" alt="image of three brushes on a table">
+                <img src="./assets/images/hacksaw.jpeg" alt="image of three brushes on a table" width="200px">
                 <h3>Hacksaw Brushes</h3>
                 <p>Made of the highest quality oak, Hacksaw brushes are known
                     for their weight and ability to hold paint in large amounts.
