--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <section class="frames">
             <h2>Frames</h2>
             <div class="section-container">
-                <img src="" alt="image of a bunch of colored frames stacked against each other">
+                <img src="./assets/images/frames.jpeg" alt="image of a bunch of colored frames stacked against each other" width="200px">
                 <h3>Art Frames (assorted)</h3>
                 <p>Assorted frames made of different material, including MDF, birchwood,
                      and PDE. Select frames can be sanded and painted according to your needs.
@@ -41,7 +41,7 @@
         <section class="paint">
             <h2>Paint</h2>
             <div class="section-container">
-                <img src="" alt="image of open paint tubes on a table with paint smearded on the table">
+                <img src="./assets/images/finnish.jpeg" alt="image of open paint tubes on a table with paint smearded on the table" width="200px">
                 <h3>Clean Finnish Paint</h3>
                 <p>Imported paint from Finland. Over 256 colors available in-store, varying in quantity
                      (1 oz. to 8 oz.). Clean Finnish paint microbinds to canvas,
